--- a/frontend/src/components/styling/Navbar.css
+++ b/frontend/src/components/styling/Navbar.css
@@ -1,11 +1,24 @@
-.top-nav{
-    background-image: url('https://images.sugarcosmetics.com/Wtp/0ccd669b-57a7-4903-b68e-bb2d998dba00.jpg');
-    background-size: cover;
-    display: flex;
-    justify-content: space-between;
-    color: white;
-    
+.top-nav {
+  background-image: url('https://images.sugarcosmetics.com/Wtp/0ccd669b-57a7-4903-b68e-bb2d998dba00.jpg');
+  background-size: cover;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  position: sticky;  /* This makes it sticky */
+  top: 0;  /* Stick to the top of the screen */
+  z-index: 10;  /* Ensure it is above other content */
+  width: 100%;
+  padding: 0;  /* Optional: Ensure no margin/padding issue */
 }
+
+.sticky{
+  position: sticky;  /* This makes it sticky */
+  top: 0;  /* Stick to the top of the screen */
+  z-index: 10;  /* Ensure it is above other content */
+  width: 100%;
+  padding: 0;  /* Optional: Ensure no margin/padding issue */
+}
+
 
 .carousel{
     height: 20px;
@@ -91,4 +104,38 @@
     background-color: #212121;
     border-radius: 10px;
     overflow: hidden;
+  }
+
+  .logout{
+    position: absolute;
+    background-color: white;
+    right: 11%;
+    top: 14%;
+    padding: 0.5%;
+    padding-right: 3%;
+    padding-left: 1.2%;
+    color: rgb(59, 59, 59);
+    border-radius: 10px;
+    
+  }
+
+  .cartno{
+    position: absolute;
+    top: 0.3%;
+    right: -50%;
+    background-color: rgb(157, 26, 70);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    border-radius: 50%;
+    width: 15px;
+    height: 15px;
+    font-size: small;
+  }
+
+  .navbar {
+    position: sticky;
+    top: 0;
+    z-index: 1000;  /* Ensure it's above other elements */
   }
