--- a/frontend/src/components/styling/radioCarousel.css
+++ b/frontend/src/components/styling/radioCarousel.css
@@ -1,17 +1,28 @@
 .radio{
-    width: auto;
+    width: 100%;
     display: flex;
+    justify-content: center;
     gap: 10px;
+    margin: 2%;
 }
 
 .radio-button{
-    width: 10px;
-    height: 10px;
-    background-color: grey;
-    border: 1px solid gray;
+    width: 8px;
+    height: 8px;
+    background-color: rgb(218, 218, 218);
+    border: 1px solid rgb(218, 218, 218);
     border-radius: 50%;
 }
 
 .radio-selected{
+    width: 16px;
+    height: 7px;
+   
+    border: 1px solid black;
+    border-radius: 3px;
     background-color: black;
+}
+
+.bannerimg{
+    min-width: 100vw;
 }
